--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "dianjizhuansubiaoA1/dianjizhuansubiaoA1.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "https://s21.ax1x.com/2025/04/21/pE5P1un.jpg"
+  avatar           : "https://s21.ax1x.com/2025/04/21/pE5PYNT.png"
   name             : "神"
   pronouns         : # "she"  
   bio              : "杀人者是我，被杀者是我，释迦牟尼是我，豺狼亦是我。"
